[package]
name = "nw"
version = "0.1.0"
authors = ["tcrain <tycrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
blake3 = "0.3.7"
itertools = "0.10.0"
# ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"]}

bincode="1.3"