[package]
name = "nw"
version = "0.1.0"
authors = ["tcrain <tycrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = { version = "0.4", features = ["std"] }
rand = "0.8"
blake3 = "0.3.7"
itertools = "0.10.0"
# ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
rustc-hash = "1.1"
bincode = "1.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = false
opt-level = 3
